tests/neg/i18188.scala
package dotty.tools.dotc.typer

class A1[T](action: A1[T] ?=> String = "") // error